Fixes by sonar